# aldryn-apphooks-config

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  requirements-test.txt  requirements.txt  runtests.py  setup.cfg  setup.py  test_requirements.txt  test_settings.py  tox.ini
.github/workflows/: test.yml
.tx/: config
aldryn_apphooks_config/: __init__.py  admin.py  app_base.py  fields.py  managers.py  mixins.py  models.py  utils.py  widgets.py
aldryn_apphooks_config/locale/de/LC_MESSAGES/: django.mo  django.po
aldryn_apphooks_config/locale/en/LC_MESSAGES/: django.mo  django.po
aldryn_apphooks_config/locale/ru/LC_MESSAGES/: django.mo  django.po
aldryn_apphooks_config/managers/: __init__.py  base.py  parler.py
aldryn_apphooks_config/static/js/aldryn_apphooks_config/: aldryn_apphooks_config.js
aldryn_apphooks_config/templates/aldryn_apphooks_config/admin/: apphook_config_widget.html
aldryn_apphooks_config/templatetags/: apphooks_config_tags.py  namespace_extras.py
aldryn_apphooks_config/tests/: test_config.py  test_migrations.py
aldryn_apphooks_config/tests/utils/example/: admin.py  cms_app.py  cms_appconfig.py  cms_apps.py  config.py  models.py  views.py
aldryn_apphooks_config/tests/utils/example/migrations/: 0001_initial.py  0002_auto_20191012_2339.py
aldryn_apphooks_config/tests/utils/example/south_migrations/: 0001_initial.py
aldryn_apphooks_config/tests/utils/example/templates/app1/: article_detail.html
aldryn_apphooks_config/tests/utils/example/templates/app2/: article_detail.html  article_list.html
docs/: conf.py  index.rst  installation.rst  usage.rst
tests/: test_config.py  test_models.py
tests/utils/example/: admin.py  cms_app.py  config.py  views.py
tests/utils/example/templates/app1/: article_list.html
tests/utils/example/templates/app2/: article_list.html
