[flake8]
exclude = *.egg-info,.eggs,.git,.settings,.tox,build,dist,docs,requirements,tmp,*migrations*,tests,data
ignore = E305
max-line-length = 99

[metadata]
license-file = LICENSE

[wheel]
universal = 1

[isort]
line_length = 99
skip = manage.py, migrations, .tox, .eggs, data
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
multi_line_output = 5
not_skip = __init__.py
known_first_party = aldryn_apphooks_config
known_django = django
known_cms = cms, menus
sections = FUTURE, STDLIB, DJANGO, CMS, THIRDPARTY, FIRSTPARTY, LIB, LOCALFOLDER
