[metadata]
name = aldryn-apphooks-config
version = attr: aldryn_apphooks_config.__version__
url = https://github.com/aldryn/aldryn-apphooks-config
project_urls =
	Documentation = https://aldryn-apphooks-config.readthedocs.io/
author = Iacopo Spalletti
author_email = i.spalletti@nephila.it
description = Namespaces based configuration for Apphooks
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
classifiers =
	License :: OSI Approved :: BSD License
	Development Status :: 5 - Production/Stable
    Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 3.2
	Framework :: Django :: 4.1
	Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[options]
include_package_data = True
install_requires =
	django-cms>=3.9
    django-appdata>=0.3.0
setup_requires =
	setuptools
packages = aldryn_apphooks_config
python_requires = >=3.7
test_suite = tests.settings.run
zip_safe = False

[options.package_data]
* = *.txt, *.rst
aldryn_apphooks_config = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[upload]
repository = https://upload.pypi.org/legacy/

[sdist]
formats = zip

[bdist_wheel]
universal = 1
